--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,8 @@ html, body{
 }
 
 .footer-section{
-    padding: 2rem;
+    padding: 1rem;
+    font-size: 10px;
     background-color: rgb(43, 43, 43);
     color: white;
     position: fixed;
@@ -34,6 +35,20 @@ html, body{
     left: 0;
     right: 0;
     height: 10vh;
+}
+
+.social {
+    position: absolute;
+    margin: 1rem;
+    right: 0rem;
+    top: 0rem;
+}
+
+.social-icons {
+    margin-top: .5rem;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 16px;
 }
 
 .drop-shadow{
@@ -44,20 +59,14 @@ html, body{
     box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
 }
 
-.coin-icon {
-    z-index: 999;
-    color: rgb(255, 166, 94);
-    margin-right: .5rem;
-}
-
-.coin-icon:hover {
-    cursor: pointer;
-    opacity: .7;
+.user-portal {
+    margin-right: 1rem;
 }
 
 .btn:hover{
     cursor: pointer;
     opacity: 0.7;
+    color: white;
 }
 
 .btn {
@@ -65,6 +74,8 @@ html, body{
     border-radius: 5px;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     padding: 1rem;
     width: 100%;
 }
@@ -76,7 +87,24 @@ html, body{
     color: white;
 }
 
+.btn-login {
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+    background-color: rgb(56, 156, 56);
+    color: white;
+    width: 50%;
+}
+
+a:hover{
+    cursor: pointer;
+}
+
 @media(max-width: 768px){
+
+    html, body {
+        font-size: 12px;
+    }
+
     h1 {
         font-size: 1rem;
     }
@@ -84,4 +112,10 @@ html, body{
     .body-section {
         padding: 2rem;
     }
+
+    .footer-section {
+        font-size: 8px;
+    }
+
+
 }
