--- a/css/leet.css
+++ b/css/leet.css
@@ -16,11 +16,7 @@ a {
     padding: 2rem;
     margin: 2rem;
     margin-top: 0 !important;
-}
-
-button {
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin-bottom: 0rem;
 }
 
 .btn-easy {
@@ -41,13 +37,31 @@ button {
     color: #8b0000;
 }
 
+.btn-buy {
+    padding: 0;
+    margin: 0;
+    background-color: #23d33a;
+    border: 1px solid #a8ffb4;
+    color: rgb(255, 255, 255);
+    width: 100%;
+}
+
+.btn-remove {
+    padding: .5rem;
+    margin: 0;
+    background-color: #ff2d2d;
+    border: 1px solid #ffa8a8;
+    color: rgb(255, 255, 255);
+    width: 100%;
+}
+
+
 .btn-score-display {
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin-left: 2rem;
     margin-right: 2rem;
-    margin-top: 3rem;
     padding-left: 2rem;
     padding-right: 2rem;
 }
@@ -55,6 +69,15 @@ button {
 .score-container {
     width: 100%;
     height: 3rem;
+    text-align: center;
+}
+
+.leet-info {
+    margin: 2rem;
+    margin-bottom: 0rem;
+    padding: 2rem;
+    padding-bottom: 0rem;
+    padding-top: 0rem;
     text-align: center;
 }
 
@@ -101,6 +124,13 @@ opacity: 0;
         margin: .5rem;
     }
 
+    .leet-info {
+        margin: .5rem;
+        margin-bottom: 0rem;
+        padding: .5rem;
+        padding-bottom: 0rem;
+    }
+
     .btn-score-display {
         margin-top: 1rem;
         padding-left: .5rem;
@@ -111,5 +141,17 @@ opacity: 0;
 
     .score-container {
         height: 2rem;
+    }
+
+    .btn-buy {
+        font-size: 10px;
+    }
+
+    .btn-remove {
+        font-size: 10px;
+    }
+
+    table {
+        font-size: 10px;
     }
 }
